UI jstree: Fix collapse of folders with one click.
Two clicks is too much work. It was removed by mistake on previous commit.

--- a/src/styles/plugins/_jstree.sass
+++ b/src/styles/plugins/_jstree.sass
@@ -73,8 +73,14 @@ $tree-color-highlight-background-text: $primary
 				.jstree-icon:empty
 					left: 25px !important
 
-		/* Closed Folder */
-		// &.jstree-closed
+		// Invisible element to expand/collapse folders.
+		&.jstree-open .jstree-icon.jstree-ocl,
+		&.jstree-closed .jstree-icon.jstree-ocl
+			float: left
+			min-width: 30px
+			opacity: 0
+			position: absolute
+			z-index: 1
 
 		/* The text of the last level item */
 		.jstree-anchor
